force-app/src/objects/EventApi__Lightning_Event_Component__mdt.object
<CustomObject>
    <description>Registry of Lightning Components enabled for use as Event Page Components for Lightning Events.</description>
    <fields>
        <fullName>EventApi__Edit_Lightning_Component_API_Name__c</fullName>
        <description>**Optional** Name of the Lightning component that needs to be instantiated to edit in Event Builder. Only provide the name of the component without namespace.</description>
        <inlineHelpText>**Optional** Name of the Lightning component that needs to be instantiated to edit in Event Builder. Only provide the name of the component without namespace.</inlineHelpText>
        <label>Edit Lightning Component API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this record will become enabled as a template.</description>
        <inlineHelpText>When checked, this record will become enabled as a template.</inlineHelpText>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Lightning_Component_API_Name__c</fullName>
        <description>**REQUIRED** Name of the Lightning component that needs to be instantiated. Only provide the name of the component without namespace.</description>
        <inlineHelpText>**REQUIRED** Name of the Lightning component that needs to be instantiated. Only provide the name of the component without namespace.</inlineHelpText>
        <label>Lightning Component API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Lightning Event Component</label>
    <pluralLabel>Lightning Event Components</pluralLabel>
</CustomObject>